update: save_restore

--- a/save_restore/save_restore_graph_and_state.ipynb
+++ b/save_restore/save_restore_graph_and_state.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +95,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 508\r\n",
+      "-rw-rw-r-- 1 scott scott   1579 Sep  7 07:41 classify_image.py\r\n",
+      "-rw-rw-r-- 1 scott scott 515659 Oct 19 08:52 save_restore_graph_and_state.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls -l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -135,6 +154,32 @@
     "    y_result = sess.run(update_y,feed_dict={x:i})\n",
     "    if i %4000 == 0:\n",
     "        saver.save(sess,checkpoint_dir,global_step=i)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 536\r\n",
+      "-rw-rw-r-- 1 scott scott   2753 Oct 19 08:53 mysaver-8000.meta\r\n",
+      "-rw-rw-r-- 1 scott scott    124 Oct 19 08:53 checkpoint\r\n",
+      "-rw-rw-r-- 1 scott scott      4 Oct 19 08:53 mysaver-8000.data-00000-of-00001\r\n",
+      "-rw-rw-r-- 1 scott scott    126 Oct 19 08:53 mysaver-8000.index\r\n",
+      "-rw-rw-r-- 1 scott scott   2753 Oct 19 08:53 mysaver-4000.meta\r\n",
+      "-rw-rw-r-- 1 scott scott      4 Oct 19 08:53 mysaver-4000.data-00000-of-00001\r\n",
+      "-rw-rw-r-- 1 scott scott    126 Oct 19 08:53 mysaver-4000.index\r\n",
+      "-rw-rw-r-- 1 scott scott 515659 Oct 19 08:52 save_restore_graph_and_state.ipynb\r\n",
+      "-rw-rw-r-- 1 scott scott   1579 Sep  7 07:41 classify_image.py\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls -lt"
    ]
   },
   {
@@ -157,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +211,7 @@
        "9999.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -221,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -265,7 +310,6 @@
    "metadata": {},
    "source": [
     "## SavedModel\n",
-    "when you want save or restore your model, there is another choice: SavedModel.\n",
     "\n",
     "SavedModel is a language-neutral, recoverable, hermetic serialization format."
    ]
