--- a/save_restore/deprecated_save_restore_graph_and_state.ipynb
+++ b/save_restore/deprecated_save_restore_graph_and_state.ipynb
@@ -688,9 +688,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow]",
+   "display_name": "tf14",
    "language": "python",
-   "name": "conda-env-tensorflow-py"
+   "name": "tf14"
   },
   "language_info": {
    "codemirror_mode": {
@@ -702,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
