--- a/save_restore/save_restore_variable.ipynb
+++ b/save_restore/save_restore_variable.ipynb
@@ -70,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 scott scott   32 Nov 20 14:52 /tmp/model.ckpt.data-00000-of-00001\r\n",
-      "-rw-rw-r-- 1 scott scott  143 Nov 20 14:52 /tmp/model.ckpt.index\r\n",
-      "-rw-rw-r-- 1 scott scott 4242 Nov 20 14:52 /tmp/model.ckpt.meta\r\n"
+      "-rw-rw-r-- 1 scott scott   32 12月  3 09:58 /tmp/model.ckpt.data-00000-of-00001\r\n",
+      "-rw-rw-r-- 1 scott scott  143 12月  3 09:58 /tmp/model.ckpt.index\r\n",
+      "-rw-rw-r-- 1 scott scott 4242 12月  3 09:58 /tmp/model.ckpt.meta\r\n"
      ]
     }
    ],
@@ -98,14 +98,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from /tmp/model.ckpt\n",
+      "INFO:tensorflow:Restoring parameters from /tmp/model.ckpt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from /tmp/model.ckpt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Model restored\n",
       "v1: [ 1.  1.  1.]\n",
       "v2: [-1. -1. -1. -1. -1.]\n"
@@ -122,8 +135,10 @@
     "    # Add ops to save and restore all the variables.\n",
     "    saver = tf.train.Saver()\n",
     "\n",
+    "    \n",
     "with tf.Session(graph=graph_restore) as sess:\n",
-    "    saver.restore(sess, \"/tmp/model.ckpt\")\n",
+    "    ckpt_path = tf.train.latest_checkpoint(\"/tmp\")\n",
+    "    saver.restore(sess,ckpt_path)\n",
     "    print(\"Model restored\")\n",
     "    #check the value\n",
     "    print(\"v1: %s\" % v1.eval())\n",
@@ -292,9 +307,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf14",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tf14"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
