update queue runner basis

--- a/queue_runner/queue_runner_basis.ipynb
+++ b/queue_runner/queue_runner_basis.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf"
@@ -62,24 +60,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "worker 1 running\n",
       "worker 0 running\n",
+      "worker 1 running\n",
       "worker 2 running\n",
+      "worker 2 requst stop\n",
+      "worker 2 stopped\n",
       "worker 0 running\n",
       "worker 0 requst stop\n",
       "worker 0 stopped\n",
       "worker 1 running\n",
-      "worker 1 stopped\n",
-      "worker 2 running\n",
-      "worker 2 requst stop\n",
-      "worker 2 stopped\n"
+      "worker 1 stopped\n"
      ]
     }
    ],
@@ -165,9 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def simple_shuffle_batch(source, capacity, batch_size=10):\n",
@@ -178,7 +173,7 @@
     "    qr = tf.train.QueueRunner(queue,[enqueue]*num_threads)\n",
     "    \n",
     "    tf.train.add_queue_runner(qr)\n",
-    "    return queue.dequeue_many(%%bashtch_size)"
+    "    return queue.dequeue_many(batch_size)"
    ]
   },
   {
@@ -190,22 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 6 13  2 21 23  7  5 18 19 20]\n",
-      "[ 8 24 31  4 25 26  3 17 27 22]\n",
-      "[40  9 14 38 15 37  1 41 44 39]\n",
-      "[43 28 50 12 49 32 47 45 42 56]\n",
-      "[53 54 34 58 52 33 10 63 35 64]\n",
-      "[57 29 51 72 36 16 71 70 67 78]\n",
-      "[59 62 30 80 69 55 73 82 77 87]\n",
-      "[88 84 79 65 90 61 11 60 92 96]\n",
-      "[85 83 86 68 66 99 97 93 75 76]\n",
+      "[ 2 19  9  7  3 24 15 25  5 18]\n",
+      "[20 21 12 22 11  4 13 10 16 29]\n",
+      "[32 31 42 30 38 23 44 36 43 35]\n",
+      "[49 48 40  8 14 51 26 28 54 57]\n",
+      "[53 55 27 52 39 60  1 58 50 61]\n",
+      "[56 37 41 65 33 45 74  6 66 76]\n",
+      "[62 69 46 75 81 47 73 79 84 63]\n",
+      "[59 72 86 88 82 68 78 71 90 17]\n",
+      "[93 97 99 67 87 83 89 98 94 34]\n",
       "queue is empty\n"
      ]
     }
@@ -230,6 +225,26 @@
     "        except tf.errors.OutOfRangeError:\n",
     "            print(\"queue is empty\")\n",
     "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tf.int32"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input.dtype"
    ]
   },
   {
@@ -310,9 +325,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tfgpu]",
+   "display_name": "tf35",
    "language": "python",
-   "name": "conda-env-tfgpu-py"
+   "name": "tf35"
   },
   "language_info": {
    "codemirror_mode": {
@@ -324,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
