--- a/save_restore/save_restore_variable.ipynb
+++ b/save_restore/save_restore_variable.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.python.tools import inspect_checkpoint"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "v1: [ 1.  1.  1.]\n",
+      "v1: [1. 1. 1.]\n",
       "v2: [-1. -1. -1. -1. -1.]\n",
       "Model saved in file: /tmp/model.ckpt\n"
      ]
@@ -70,21 +79,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-rw-r-- 1 scott scott   32 12月  3 09:58 /tmp/model.ckpt.data-00000-of-00001\r\n",
-      "-rw-rw-r-- 1 scott scott  143 12月  3 09:58 /tmp/model.ckpt.index\r\n",
-      "-rw-rw-r-- 1 scott scott 4242 12月  3 09:58 /tmp/model.ckpt.meta\r\n"
+      "-rw-r--r-- 1 roo roo   32 Aug 28 11:59 /tmp/model.ckpt.data-00000-of-00001\n",
+      "-rw-r--r-- 1 roo roo  143 Aug 28 11:59 /tmp/model.ckpt.index\n",
+      "-rw-r--r-- 1 roo roo 3939 Aug 28 11:59 /tmp/model.ckpt.meta\n"
      ]
     }
    ],
    "source": [
     "!ls  -l /tmp/model.ckpt*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor_name:  v1\n",
+      "[1. 1. 1.]\n",
+      "tensor_name:  v2\n",
+      "[-1. -1. -1. -1. -1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inspect_checkpoint.print_tensors_in_checkpoint_file(\"/tmp/model.ckpt\", tensor_name=\"\", all_tensors=True)"
    ]
   },
   {
@@ -105,22 +134,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from /tmp/model.ckpt\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from /tmp/model.ckpt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "INFO:tensorflow:Restoring parameters from /tmp/model.ckpt\n",
       "Model restored\n",
-      "v1: [ 1.  1.  1.]\n",
+      "v1: [1. 1. 1.]\n",
       "v2: [-1. -1. -1. -1. -1.]\n"
      ]
     }
@@ -192,28 +208,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from /tmp/model.ckpt\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from /tmp/model.ckpt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "v1 : [ 0.  0.  0.]\n",
+      "INFO:tensorflow:Restoring parameters from /tmp/model.ckpt\n",
+      "v1 : [0. 0. 0.]\n",
       "v2 : [-1. -1. -1. -1. -1.]\n"
      ]
     }
@@ -240,6 +243,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### save to different names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v1: [1. 1. 1.]\n",
+      "v2: [-1. -1. -1. -1. -1.]\n",
+      "Model saved in file: /tmp/model.ckpt\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "graph_save = tf.Graph()\n",
+    "with graph_save.as_default() as graph:\n",
+    "    # Create some variables.\n",
+    "    v1 = tf.get_variable(\"v1\", shape=[3], initializer = tf.zeros_initializer)\n",
+    "    v2 = tf.get_variable(\"v2\", shape=[5], initializer = tf.zeros_initializer)\n",
+    "\n",
+    "    inc_v1 = v1.assign(v1+1)\n",
+    "    dec_v2 = v2.assign(v2-1)\n",
+    "\n",
+    "    # Add an op to initialize the variables.\n",
+    "    init_op = tf.global_variables_initializer()\n",
+    "\n",
+    "    # Add ops to save and restore all the variables.\n",
+    "    saver = tf.train.Saver({\"v2_xxx\": v2})\n",
+    "# Later, launch the model, initialize the variables, do some work, and save the\n",
+    "# variables to disk.\n",
+    "with tf.Session(graph=graph_save) as sess:\n",
+    "  sess.run(init_op)\n",
+    "  # Do some work with the model.\n",
+    "  inc_v1.op.run()\n",
+    "  dec_v2.op.run()\n",
+    "  # Save the variables to disk.\n",
+    "  save_path = saver.save(sess, \"/tmp/model.ckpt\")\n",
+    "  print(\"v1: %s\" % v1.eval())\n",
+    "  print(\"v2: %s\" % v2.eval())\n",
+    "  print(\"Model saved in file: %s\" % save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor_name:  v2_xxx\n",
+      "[-1. -1. -1. -1. -1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inspect_checkpoint.print_tensors_in_checkpoint_file(\"/tmp/model.ckpt\", tensor_name=\"\", all_tensors=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from /tmp/model.ckpt\n",
+      "v1 : [0. 0. 0.]\n",
+      "v2 : [-1. -1. -1. -1. -1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph_partial_save = tf.Graph()\n",
+    "with graph_partial_save.as_default() as graph:\n",
+    "    # Create some variables.\n",
+    "    v1 = tf.get_variable(\"v1\", [3], initializer = tf.zeros_initializer)\n",
+    "    v2 = tf.get_variable(\"v2\", [5], initializer = tf.zeros_initializer)\n",
+    "\n",
+    "    # Add ops to save and restore only `v2` using the name \"v2\"\n",
+    "    saver = tf.train.Saver({\"v2_xxx\": v2})\n",
+    "    \n",
+    "with tf.Session(graph=graph_partial_save) as sess:\n",
+    "    # Initialize v1 since the saver will not.\n",
+    "    v1.initializer.run()\n",
+    "    saver.restore(sess, \"/tmp/model.ckpt\")\n",
+    "    print(\"v1 : %s\" % v1.eval())\n",
+    "    print(\"v2 : %s\" % v2.eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## inspect checkpoint"
    ]
   },
@@ -252,16 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.python.tools import inspect_checkpoint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +387,7 @@
      "output_type": "stream",
      "text": [
       "tensor_name:  v1\n",
-      "[ 1.  1.  1.]\n",
+      "[1. 1. 1.]\n",
       "tensor_name:  v2\n",
       "[-1. -1. -1. -1. -1.]\n"
      ]
@@ -321,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
